# aoc-2024

./: .gitignore  Cargo.toml  flake.nix
benches/: day1.rs
src/: main.rs
src/day1/: mod.rs
